--- a/index.html
+++ b/index.html
@@ -30,25 +30,21 @@
     </div>
   </header>
 
-  <!-- <header>
-    <div class="container">
-      <div class="logo">
-        <img src="" alt="Pyro Logo">
-      </div>
-      <nav>
-        <ul>
-          <li><a href="#home">Acceuil</a></li>
-          <li><a href="#services">Nos Services</a></li>
-          <li><a href="#about">À Propos</a></li>
-          <li><a href="#why-us">Pourquoi Nous ?</a></li>
-        </ul>
-      </nav>
-      <a href="#contact" class="btn-primary">Contactez-nous</a>
-    </div>
-  </header> -->
-
   <!-- Hero Section -->
+
   <section id="hero">
+    <article class="container">
+      <div>
+        <h1>Votre expert en sécurité incendie: <span class="text-container"><span id="dynamic-text"></span></span></h1>
+        <p>Des solutions sur mesure pour protéger vos espaces et prévenir les incendies en toute sécurité.</p>
+      </div>
+
+      <div>
+
+      </div>
+    </article>
+  </section>
+  <section id="services">
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore aliquam nam atque quibusdam maiores velit illum
     modi rem ex asperiores repudiandae, ullam sequi culpa corrupti nobis iure? Similique provident ullam aspernatur
     voluptatibus facilis excepturi tenetur iusto, veniam adipisci dolorem dolor numquam quasi? Accusamus quaerat
