start working on services section

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       <div>
         <h1>Votre expert en sécurité incendie: <span class="text-container"><span id="dynamic-text"></span></span></h1>
         <p>Des solutions sur mesure pour protéger vos espaces et prévenir les incendies en toute sécurité.</p>
+        <div class="btn-primary">
+          <a href="#contact">Demandez un devis</a>
+        </div>
       </div>
 
       <div>
@@ -45,6 +48,19 @@
     </article>
   </section>
   <section id="services">
+      <header>
+        <h1>services</h1>
+        <h3>Ce que nous offrons</h3>
+      </header>
+      <div class="services-grid">
+        <article class="service-item">
+          <div class="service-pic"></div>
+          <div class="service-title"></div>
+          <div class="service-desc"></div>
+        </article>
+        
+      </div>
+    
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore aliquam nam atque quibusdam maiores velit illum
     modi rem ex asperiores repudiandae, ullam sequi culpa corrupti nobis iure? Similique provident ullam aspernatur
     voluptatibus facilis excepturi tenetur iusto, veniam adipisci dolorem dolor numquam quasi? Accusamus quaerat
