working on about section

--- a/index.html
+++ b/index.html
@@ -112,6 +112,63 @@
       </div>
     </section>
 
+    <section id="about">
+      <article class="container">
+        <div>
+          <h2>Qui sommes-nous ?</h2>
+          <p>
+            Avec plus de 15 ans d'expérience, Pyro est votre partenaire de
+            confiance en matière de sécurité incendie.
+          </p>
+        </div>
+        <div>
+          <img src="./assets/images/team.png" alt="notre équipe" />
+        </div>
+      </article>
+
+      <article class="slogan"></article>
+
+      <article class="stats">
+        <div class="outer">
+          <div class="dot"></div>
+          <div class="card">
+            <div class="ray"></div>
+            <div class="text">750k</div>
+            <div>Views</div>
+            <div class="line topl"></div>
+            <div class="line leftl"></div>
+            <div class="line bottoml"></div>
+            <div class="line rightl"></div>
+          </div>
+        </div>
+
+        <div class="outer">
+          <div class="dot"></div>
+          <div class="card">
+            <div class="ray"></div>
+            <div class="text">750k</div>
+            <div>Views</div>
+            <div class="line topl"></div>
+            <div class="line leftl"></div>
+            <div class="line bottoml"></div>
+            <div class="line rightl"></div>
+          </div>
+        </div>
+
+        <div class="outer">
+          <div class="dot"></div>
+          <div class="card">
+            <div class="ray"></div>
+            <div class="text">750k</div>
+            <div>Views</div>
+            <div class="line topl"></div>
+            <div class="line leftl"></div>
+            <div class="line bottoml"></div>
+            <div class="line rightl"></div>
+          </div>
+        </div>
+      </article>
+    </section>
     <!-- <section id="hero">
     <div class="container">
       <h1>Votre expert en sécurité incendie: <span>Prévenir, Protéger, Maîtriser.</span></h1>
