--- a/index.html
+++ b/index.html
@@ -121,50 +121,85 @@
             confiance en matière de sécurité incendie.
           </p>
         </div>
+
         <div>
-          <img src="./assets/images/team.png" alt="notre équipe" />
+          <div class="slider">
+            <div class="list">
+              <div class="item">
+                <img src="./assets/images/img-1.jpg" alt="" />
+              </div>
+
+              <div class="item">
+                <img src="./assets/images/img-2.jpg" alt="" />
+              </div>
+
+              <div class="item">
+                <img src="./assets/images/img-3.jpg" alt="" />
+              </div>
+
+              <div class="item">
+                <img src="./assets/images/img-4.jpg" alt="" />
+              </div>
+            </div>
+
+            <div class="buttons">
+              <button id="prev">&lsaquo;</button>
+              <button id="next">&rsaquo;</button>
+            </div>
+
+            <ul class="dots">
+              <li class="active"></li>
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
+          </div>
         </div>
       </article>
 
       <article class="slogan"></article>
 
       <article class="stats">
-        <div class="outer">
-          <div class="dot"></div>
-          <div class="card">
-            <div class="ray"></div>
-            <div class="text">750k</div>
-            <div>Views</div>
-            <div class="line topl"></div>
-            <div class="line leftl"></div>
-            <div class="line bottoml"></div>
-            <div class="line rightl"></div>
+        <div class="stats-content">
+          <div class="outer">
+            <div class="dot"></div>
+            <div class="card">
+              <div class="ray"></div>
+              <!-- <div class="text">750k</div>
+              <div>Views</div> -->
+              <h3 class="text">+ 15</h3>
+              <p>Ans dans le marché</p>
+              <div class="line topl"></div>
+              <div class="line leftl"></div>
+              <div class="line bottoml"></div>
+              <div class="line rightl"></div>
+            </div>
           </div>
-        </div>
 
-        <div class="outer">
-          <div class="dot"></div>
-          <div class="card">
-            <div class="ray"></div>
-            <div class="text">750k</div>
-            <div>Views</div>
-            <div class="line topl"></div>
-            <div class="line leftl"></div>
-            <div class="line bottoml"></div>
-            <div class="line rightl"></div>
+          <div class="outer">
+            <div class="dot"></div>
+            <div class="card">
+              <div class="ray"></div>
+              <h3 class="text">+ 600</h3>
+              <p>Projets complétés</p>
+              <div class="line topl"></div>
+              <div class="line leftl"></div>
+              <div class="line bottoml"></div>
+              <div class="line rightl"></div>
+            </div>
           </div>
-        </div>
 
-        <div class="outer">
-          <div class="dot"></div>
-          <div class="card">
-            <div class="ray"></div>
-            <div class="text">750k</div>
-            <div>Views</div>
-            <div class="line topl"></div>
-            <div class="line leftl"></div>
-            <div class="line bottoml"></div>
-            <div class="line rightl"></div>
+          <div class="outer">
+            <div class="dot"></div>
+            <div class="card">
+              <div class="ray"></div>
+              <h3 class="text">+ 40</h3>
+              <p>Employés qualifiés</p>
+              <div class="line topl"></div>
+              <div class="line leftl"></div>
+              <div class="line bottoml"></div>
+              <div class="line rightl"></div>
+            </div>
           </div>
         </div>
       </article>
