--- a/index.html
+++ b/index.html
@@ -115,11 +115,23 @@
     <section id="about">
       <article class="container">
         <div>
-          <h2>Qui sommes-nous ?</h2>
-          <p>
-            Avec plus de 15 ans d'expérience, Pyro est votre partenaire de
-            confiance en matière de sécurité incendie.
-          </p>
+          <h2 class="section-title">Qui sommes-nous ?</h2>
+          <div class="content">
+            <p>
+              Avec plus de 15 ans d'expérience, Pyro est votre partenaire de
+              confiance en matière de sécurité incendie Lorem ipsum dolor sit
+              amet consectetur adipisicing elit. Commodi, labore..
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Cupiditate mollitia iure at nostrum laboriosam, deserunt ipsa
+              illum deleniti eveniet. Eligendi cupiditate voluptatum ratione,
+              minus asperiores accusamus hic iste impedit. Assumenda atque ipsam
+              autem possimus asperiores obcaecati, perferendis consequatur
+              sapiente enim perspiciatis, vel numquam architecto libero placeat
+              quod quisquam quaerat nostrum.
+            </p>
+          </div>
         </div>
 
         <div>
