adjusting slider + adding flamme

--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
     </section>
 
     <section id="about">
+      <img
+        src="./assets/images/flamme.svg"
+        alt="flamme logo"
+        class="about-logo"
+      />
       <article class="container">
         <div>
           <h2 class="section-title">Qui sommes-nous ?</h2>
@@ -177,8 +182,6 @@
             <div class="dot"></div>
             <div class="card">
               <div class="ray"></div>
-              <!-- <div class="text">750k</div>
-              <div>Views</div> -->
               <h3 class="text">+ 15</h3>
               <p>Ans dans le marché</p>
               <div class="line topl"></div>
