working on testimonial section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       content="Site vitrine de Pyro, votre expert en sécurité incendie."
     />
     <title>Pyro - Sécurité Incendie</title>
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -55,7 +57,7 @@
     </section>
     <section id="services">
       <header>
-        <h1>services</h1>
+         <h2 class="section-title">services</h2>
         <h3>Ce que nous offrons</h3>
       </header>
       <div class="services-grid">
@@ -219,6 +221,103 @@
         </div>
       </article>
     </section>
+
+    <section id="why-us">
+      <header>
+        <h2 class="section-title">pourquoi-nous ?</h1>
+      </header>
+
+      <div class="container reason-grid">
+        <article class="reason-item">
+          <img src="./assets/images/quality-icon.svg" alt="icone qualité" class="reason-icon">
+          <h3 class="reason-title">Engagement de qualité</h3>
+          <p>Maîtrise des normes, avec des équipements performants et fiables.</p>
+        </article>
+
+        <article class="reason-item">
+          <img src="./assets/images/innovation-icon.svg" alt="icone innovation" class="reason-icon">
+          <h3 class="reason-title">Technologie et innovation</h3>
+          <p>Utilisation d'outils modernes pour garantir des solutions efficaces.</p>
+        </article>
+
+        <article class="reason-item">
+          <img src="./assets/images/solution-sur-mesure-icon.svg" alt="icone solution sur mesure" class="reason-icon">
+          <h3 class="reason-title">Solutions sur mesure</h3>
+          <p>Approche personnalisée adaptée aux besoins spécifiques des clients.</p>
+        </article>
+
+        <article class="reason-item">
+          <img src="./assets/images/reactivite-icon.svg" alt="icone réactivité" class="reason-icon">
+          <h3 class="reason-title">Réactivité</h3>
+          <p>Intervention rapide et suivi rigoureux des projets.</p>
+        </article>
+      </div>
+
+      <div class="testimonial-container">
+        <header>
+          <h2 class="section-title">Témoignages</h2>
+          <p>Ce que nos clients disent</p>
+        </header>
+
+        <div class="carousel">
+          <a class="carousel-item">
+            <div class="img-area">
+              <img src="./assets/images/face-1.jpg" alt="face 1">
+            </div>
+            <div class="testi">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae ipsum modi aliquam temporibus assumenda quibusdam autem animi accusamus voluptatibus, perferendis expedita aut velit excepturi, impedit fuga magnam maiores cumque minima.</p>
+              <h4>nom de la personne</h4>
+              <h5>entreprise</h5>
+            </div>
+          </a>
+
+          <a class="carousel-item">
+            <div class="img-area">
+              <img src="./assets/images/face-2.jpg" alt="face 1">
+            </div>
+            <div class="testi">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae ipsum modi aliquam temporibus assumenda quibusdam autem animi accusamus voluptatibus, perferendis expedita aut velit excepturi, impedit fuga magnam maiores cumque minima.</p>
+              <h4>nom de la personne</h4>
+              <h5>entreprise</h5>
+            </div>
+          </a>
+
+          <a class="carousel-item">
+            <div class="img-area">
+              <img src="./assets/images/face-3.jpg" alt="face 1">
+            </div>
+            <div class="testi">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae ipsum modi aliquam temporibus assumenda quibusdam autem animi accusamus voluptatibus, perferendis expedita aut velit excepturi, impedit fuga magnam maiores cumque minima.</p>
+              <h4>nom de la personne</h4>
+              <h5>entreprise</h5>
+            </div>
+          </a>
+
+          <a class="carousel-item">
+            <div class="img-area">
+              <img src="./assets/images/face-4.jpg" alt="face 1">
+            </div>
+            <div class="testi">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae ipsum modi aliquam temporibus assumenda quibusdam autem animi accusamus voluptatibus, perferendis expedita aut velit excepturi, impedit fuga magnam maiores cumque minima.</p>
+              <h4>nom de la personne</h4>
+              <h5>entreprise</h5>
+            </div>
+          </a>
+
+          <a  class="carousel-item">
+            <div class="img-area">
+              <img src="./assets/images/face-5.jpg" alt="face 1">
+            </div>
+            <div class="testi">
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repudiandae ipsum modi aliquam temporibus assumenda quibusdam autem animi accusamus voluptatibus, perferendis expedita aut velit excepturi, impedit fuga magnam maiores cumque minima.</p>
+              <h4>nom de la personne</h4>
+              <h5>entreprise</h5>
+            </div>
+          </a>
+        </div>
+      </div>
+    </section>
+
     <!-- <section id="hero">
     <div class="container">
       <h1>Votre expert en sécurité incendie: <span>Prévenir, Protéger, Maîtriser.</span></h1>
@@ -314,16 +413,19 @@
       <p>Ce que nos clients disent</p>
       <div class="testimonials-grid">
         <div class="testimonial">
+          <img src="" />
           <p>"Excellente expérience avec Pyro ! Leur équipe est réactive et professionnelle."</p>
           <h4>- Nom de la personne</h4>
           <p>Société</p>
         </div>
         <div class="testimonial">
+          <img src="" />
           <p>"Nous avons sécurisé nos locaux avec leur expertise. Merci !"</p>
           <h4>- Nom de la personne</h4>
           <p>Société</p>
         </div>
         <div class="testimonial">
+          <img src="" />
           <p>"Leur réactivité et suivi sont exemplaires !"</p>
           <h4>- Nom de la personne</h4>
           <p>Société</p>
@@ -356,6 +458,9 @@
     </div>
   </footer> -->
 
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./script.js"></script>
   </body>
 </html>
