add all elements

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta
       name="description"
       content="Site vitrine de Pyro, votre expert en sécurité incendie."
@@ -52,7 +53,19 @@
           </div>
         </div>
 
-        <div></div>
+        <div class="hero-images-wrap">
+          <div class="hero-image-wrap">
+            <img src="./assets/images/smoke-detector.png" alt="">
+          </div>
+
+          <div class="hero-image-wrap">
+            <img src="./assets/images/extencteur.png" alt="">
+          </div>
+
+          <div class="hero-image-wrap">
+            <img src="./assets/images/exit.png" alt="">
+          </div>
+        </div>
       </article>
     </section>
     <section id="services">
@@ -317,6 +330,54 @@
         </div>
       </div>
     </section>
+
+    <section id="contact">
+      <img src="./assets/images/alarm.svg" alt="alarm icon" class="alarm">
+      <p class="aside-text">pyro sécurite incendie</p>
+      <header>
+        <h2 class="section-title">nous contacter</h2>
+      </header>
+      <div class="container">
+        <article class="contact-info">
+          <a class="contact-card" href="tel:+213699124932">
+            <div class="icon-wrap">
+              <img src="./assets/images/phone-call.svg" alt="">
+            </div>
+            <div>
+              <h4>Phone</h4>
+              <p>+213-666 00 00 01</p>
+            </div>
+          </a>
+
+          <a class="contact-card" href="mailto:rabah.1092@gmail.com">
+            <div class="icon-wrap">
+              <img src="./assets/images/at.svg" alt="">
+            </div>
+            <div>
+              <h4>Email</h4>
+              <p>contact@pyro-dz.com</p>
+            </div>
+          </a>
+
+          <a class="contact-card" >
+            <div class="icon-wrap">
+              <img src="./assets/images/marker.svg" alt="">
+            </div>
+            <div>
+              <h4>Adresse</h4>
+              <p>Les Anassers 4 Copemad Nord Bt 13 N° 02 Kouba</p>
+            </div>
+          </a>
+        </article>
+        <article class="map-wrap">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51162.17266089143!2d3.0173702926893466!3d36.73130739048297!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x128fadb226fb1939%3A0xa8e67493ab22ddcf!2sSARL%20PYRO%20SECURITE%20INCENDIE!5e0!3m2!1sfr!2sdz!4v1735811905939!5m2!1sfr!2sdz"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+      </div>
+    </section>
+
+    <footer>
+      <h4>&copy; <span id="year"></span> SARL PYRO. Tous droits réservés.</h4>
+    </footer>
 
     <!-- <section id="hero">
     <div class="container">
