--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
           </div>
         </div>
 
-        <div class="hero-images-wrap">
-          <div class="hero-image-wrap">
+        <div class="hero-images-wrap" id="parallax-wrap">
+          <div class="hero-image-wrap"  data-value="-3" data-rotate="0deg">
             <img src="./assets/images/smoke-detector.png" alt="">
           </div>
 
-          <div class="hero-image-wrap">
+          <div class="hero-image-wrap" id="parallax-hero-image" data-value="3" data-rotate="33deg">
             <img src="./assets/images/extencteur.png" alt="">
           </div>
 
-          <div class="hero-image-wrap">
+          <div class="hero-image-wrap"  data-value="-6" data-rotate="17deg">
             <img src="./assets/images/exit.png" alt="">
           </div>
         </div>
@@ -333,7 +333,7 @@
 
     <section id="contact">
       <img src="./assets/images/alarm.svg" alt="alarm icon" class="alarm">
-      <p class="aside-text">pyro sécurite incendie</p>
+      <p class="aside-text shine">pyro sécurite incendie</p>
       <header>
         <h2 class="section-title">nous contacter</h2>
       </header>
